force-app/main/default/objects/Policy_Forms__c/Policy_Forms__c.object-meta.xml
<CustomObject>
    <label>Policy Forms</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>