force-app/main/default/objects/Policy_Forms__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>