force-app/main/default/objects/Policy_Forms__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>