force-app/main/default/objects/Policy_Forms__c/fields/Form_Resident__c.field-meta.xml
<CustomField>
    <fullName>Form_Resident__c</fullName>
    <label>Form Resident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>