force-app/main/default/objects/Policy_Forms__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <label>Form Template</label>
    <type>Url</type>
</CustomField>