force-app/main/default/objects/Policy_Forms__c/fields/Inc__c.field-meta.xml
<CustomField>
    <fullName>Inc__c</fullName>
    <label>Inc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>