force-app/main/default/objects/Policy_Forms__c/fields/Prior_Version__c.field-meta.xml
<CustomField>
    <fullName>Prior_Version__c</fullName>
    <label>Prior Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>