force-app/main/default/objects/Policy_Forms__c/fields/Referral_Reqd__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Req&apos;d</label>
    <type>Checkbox</type>
</CustomField>