force-app/main/default/objects/Policy_Forms__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variable</label>
    <type>Checkbox</type>
</CustomField>