force-app/main/default/objects/Policy_Forms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Selected__c</columns>
    <columns>Form_Type__c</columns>
    <columns>LOB__c</columns>
    <columns>Symbol__c</columns>
    <columns>Number__c</columns>
    <columns>Edition__c</columns>
    <columns>Order__c</columns>
    <columns>Variable__c</columns>
    <columns>Prior_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>