force-app/main/default/objects/Policy_Forms__c/listViews/Form_Integration_Pilot.listView-meta.xml
<ListView>
    <fullName>Form_Integration_Pilot</fullName>
    <columns>Form_Type__c</columns>
    <columns>NAME</columns>
    <columns>LOB__c</columns>
    <columns>Order__c</columns>
    <columns>Form__c</columns>
    <columns>Form_Resident__c</columns>
    <filterScope>Mine</filterScope>
    <label>Form Integration</label>
</ListView>